feature: create film section for main page; add new film entities and dto, service logic and templates